# OpenGLK

./: .gitignore  CMakeLists.txt  Makefile  compile.sh  readme.md
carTranslator/: .swp  a.out  carBody  translator.cpp
common/: controls.cpp  controls.hpp  objloader.cpp  polygon.cpp  polygon.h  shape.cpp  shape.h
example01/src/: main.cpp
tugas01/: main.cpp
tugas01/shader/: FragmentShader.fsgl  VertexShader.vsgl
tugas01/src/: main.cpp
tugas02/: main.cpp
tugas02/shader/: VertexShader.vsgl
tugas02_test/: main.cpp
tugas02_test/shader/: FragmentShader.fsgl  VertexShader.vsgl
tugas02_v2/: Makefile  main  main.cpp
tugas04/: main.cpp
tugas04/shader/: FragmentShader.fsgl  VertexShader.vsgl
tugas05/: main.cpp
tugas06/: main.cpp
tugas06/shader/: FragmentShader.fsgl
tutorial01/: main.cpp
tutorial04/: tutorial04.cpp
tutorial18/: Particle.fragmentshader  tutorial18.cpp
uas/: main (backup car).cpp  main (backup par).cpp  main.cpp  resize.cpp  tutorial18.cpp
uas/shader/: Car.fragmentshader  Car.vertexshader  Particle.vertexshader  RainParticle.fragmentshader  RainParticle.vertexshader  SmokeParticle.fragmentshader
